--- a/module2-sol/index.html
+++ b/module2-sol/index.html
@@ -2,11 +2,37 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>notice me</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/styles.css">
+	<title>Character Selector</title>
 </head>
 <body>
 
-<h1> header </h1>
+<h1>Choose Your Character</h1>
+
+<div class="row">
+	<div class="col-lg-4 col-md-6">
+	<section class="box1">
+		<h2>Nero</h2>
+		<p>Really likes eating plastic. When his position is not revealed by the sounds of crinkling plastic, Nero is an excellent stealth type. </p>
+		<p>Special powers include his soul snatching glare and the destructive powers of his tail. </p>
+	</section>
+</div>
+<div class="col-lg-4 col-md-6">
+	<section class="box2">
+		<h2>Atreus</h2>
+		<p>Master of deception. He portrays himself as a love bug when in reality, he is an all consuming beast. Loves food more than life itself.</p>
+		<p> Special powers include ear-shattering meows and his ragdoll body slam.</p>
+	</section>
+</div>
+<div class="col-lg-4 col-md-12">
+	<section class="box3">
+		<h2>Chance</h2>
+		<p>The drive and energy levels of this character are unsurpassed. Be warned that when the chase begins, it will never end until Chance says so.</p>
+		<p> Special powers include DESTRUCTION and the healing magic of love.</p>
+	</section>
+</div>
+</div>
 
 </body>
 </html>
